--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "component-collect-wap",
+  "name": "wap",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "amfe-flexible": "^2.2.1",
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "vant": "^2.5.7",
@@ -15,14 +16,17 @@
     "vue-router": "^3.1.6"
   },
   "devDependencies": {
+    "@babel/compat-data": "7.9.0",
     "@vue/cli-plugin-babel": "^4.2.0",
     "@vue/cli-plugin-eslint": "^4.2.0",
     "@vue/cli-service": "^4.2.0",
     "babel-eslint": "^10.0.3",
+    "babel-plugin-import": "^1.13.1",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.1.2",
-    "stylus": "^0.54.7",
-    "stylus-loader": "^3.0.2",
+    "less": "^3.12.2",
+    "less-loader": "^7.0.2",
+    "postcss-pxtorem": "^5.1.1",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
